k8s/js-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: js-server
spec:
  selector:
    app: js-server
  type: LoadBalancer
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: js-server
    protocol: TCP
    port: 8080
    targetPort: 8080 
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
